simplify navigation to the top of the page to prevent overlapping page elements

--- a/src/csi_pi/resources/css/style.css
+++ b/src/csi_pi/resources/css/style.css
@@ -13,6 +13,7 @@ input, textarea {
     padding: 4px 7px;
     margin-bottom: 8px;
     border-radius: 2px;
+    max-width: 100%;
 }
 
 textarea {
@@ -45,27 +46,29 @@ textarea {
     display: none;
 }
 
-a.navigation {
+.navigation a {
     padding: 16px;
     background: #000;
     color: #FFF;
     text-decoration: none;
-    display: block;
+    display: inline-block;
     margin-bottom: 32px;
     text-align: center;
+    margin-right: 16px;
 }
 
-a.navigation:hover {
+.navigation a:hover {
     background: #333
 }
 
-a.navigation.selected {
+.navigation a.selected {
     background: #FFF;
     color: #000;
     border: 3px solid #000;
-    padding: 15px;
+    padding: 13px;
 }
-a.navigation.selected:hover {
+
+.navigation a.selected:hover {
     border: 3px solid #333;
     color: #333;
 }
